--- a/xcz/XCZWorkDetailViewController.xib
+++ b/xcz/XCZWorkDetailViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="5056" systemVersion="13D65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="5056" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
@@ -18,39 +18,92 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3KG-O2-X76">
-                    <rect key="frame" x="139" y="73" width="42" height="21"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n3R-5O-41w">
-                    <rect key="frame" x="139" y="102" width="42" height="21"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qfz-9g-nNm">
-                    <rect key="frame" x="25" y="131" width="280" height="162"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="题解" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zjl-SQ-Ft8">
-                    <rect key="frame" x="20" y="301" width="34" height="21"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1p1-gD-O6S">
-                    <rect key="frame" x="20" y="330" width="280" height="85"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="highlightedColor"/>
-                </label>
+                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dIw-YX-ZQ3">
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                    <subviews>
+                        <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FfD-Bw-Cdd">
+                            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <subviews>
+                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3KG-O2-X76">
+                                    <rect key="frame" x="20" y="71" width="280" height="30"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="30" id="NUc-wX-htA"/>
+                                    </constraints>
+                                    <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Author" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n3R-5O-41w">
+                                    <rect key="frame" x="20" y="103" width="280" height="21"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Content" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="280" translatesAutoresizingMaskIntoConstraints="NO" id="Qfz-9g-nNm">
+                                    <rect key="frame" x="20" y="137" width="280" height="21"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="X5N-IR-0wA"/>
+                                    </constraints>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="题解" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zjl-SQ-Ft8">
+                                    <rect key="frame" x="20" y="166" width="280" height="21"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Intro" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="280" translatesAutoresizingMaskIntoConstraints="NO" id="1p1-gD-O6S">
+                                    <rect key="frame" x="20" y="195" width="280" height="21"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="0dw-mu-0Em"/>
+                                    </constraints>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                            <constraints>
+                                <constraint firstItem="n3R-5O-41w" firstAttribute="top" secondItem="3KG-O2-X76" secondAttribute="bottom" constant="10" id="9kF-hC-Mog" userLabel="Vertical Space - (10) - Label - Author - Label - Title"/>
+                                <constraint firstItem="3KG-O2-X76" firstAttribute="top" secondItem="FfD-Bw-Cdd" secondAttribute="top" constant="20" id="FE1-0h-3sh"/>
+                                <constraint firstItem="1p1-gD-O6S" firstAttribute="leading" secondItem="FfD-Bw-Cdd" secondAttribute="leading" constant="20" id="IPA-aC-tZz"/>
+                                <constraint firstAttribute="trailing" secondItem="zjl-SQ-Ft8" secondAttribute="trailing" constant="20" id="Ooi-Dt-QOO"/>
+                                <constraint firstAttribute="trailing" secondItem="Qfz-9g-nNm" secondAttribute="trailing" constant="20" id="QbW-S5-K4A"/>
+                                <constraint firstItem="zjl-SQ-Ft8" firstAttribute="top" secondItem="Qfz-9g-nNm" secondAttribute="bottom" constant="10" id="RTJ-vb-NlG"/>
+                                <constraint firstItem="zjl-SQ-Ft8" firstAttribute="leading" secondItem="FfD-Bw-Cdd" secondAttribute="leading" constant="20" id="Uky-bq-3cR"/>
+                                <constraint firstItem="n3R-5O-41w" firstAttribute="leading" secondItem="FfD-Bw-Cdd" secondAttribute="leading" constant="20" id="Yki-9i-Udi"/>
+                                <constraint firstAttribute="trailing" secondItem="3KG-O2-X76" secondAttribute="trailing" constant="20" id="bvq-Hq-b4E"/>
+                                <constraint firstAttribute="trailing" secondItem="1p1-gD-O6S" secondAttribute="trailing" constant="20" id="cSw-8k-No4"/>
+                                <constraint firstItem="Qfz-9g-nNm" firstAttribute="top" secondItem="n3R-5O-41w" secondAttribute="bottom" constant="10" id="fEq-Bj-raJ"/>
+                                <constraint firstAttribute="trailing" secondItem="n3R-5O-41w" secondAttribute="trailing" constant="20" id="h28-Hm-PHH"/>
+                                <constraint firstItem="Qfz-9g-nNm" firstAttribute="leading" secondItem="FfD-Bw-Cdd" secondAttribute="leading" constant="20" id="m6q-tg-fId"/>
+                                <constraint firstItem="3KG-O2-X76" firstAttribute="leading" secondItem="FfD-Bw-Cdd" secondAttribute="leading" constant="20" id="mii-0J-7dR"/>
+                                <constraint firstItem="1p1-gD-O6S" firstAttribute="top" secondItem="zjl-SQ-Ft8" secondAttribute="bottom" constant="10" id="oRR-bn-i5A"/>
+                                <constraint firstAttribute="bottom" secondItem="1p1-gD-O6S" secondAttribute="bottom" constant="20" id="x7u-QT-KQE"/>
+                            </constraints>
+                        </view>
+                    </subviews>
+                    <constraints>
+                        <constraint firstAttribute="bottom" secondItem="FfD-Bw-Cdd" secondAttribute="bottom" id="Beo-8T-A9E"/>
+                        <constraint firstAttribute="trailing" secondItem="FfD-Bw-Cdd" secondAttribute="trailing" id="Wlb-3p-msW"/>
+                        <constraint firstItem="FfD-Bw-Cdd" firstAttribute="leading" secondItem="dIw-YX-ZQ3" secondAttribute="leading" id="XIy-FK-R6A"/>
+                        <constraint firstItem="FfD-Bw-Cdd" firstAttribute="top" secondItem="dIw-YX-ZQ3" secondAttribute="top" id="hLh-nw-7z1"/>
+                    </constraints>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                </scrollView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstItem="dIw-YX-ZQ3" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="4VE-4n-QW7"/>
+                <constraint firstAttribute="bottom" secondItem="dIw-YX-ZQ3" secondAttribute="bottom" id="Ahk-nu-ofC"/>
+                <constraint firstAttribute="trailing" secondItem="dIw-YX-ZQ3" secondAttribute="trailing" id="HvY-2z-sPF"/>
+                <constraint firstItem="dIw-YX-ZQ3" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="RUC-En-Tap"/>
+            </constraints>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
             <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
