--- a/xcz/XCZWorkDetailViewController.xib
+++ b/xcz/XCZWorkDetailViewController.xib
@@ -8,6 +8,7 @@
             <connections>
                 <outlet property="authorField" destination="n3R-5O-41w" id="rSW-a3-6Mk"/>
                 <outlet property="contentField" destination="Qfz-9g-nNm" id="1ZN-8m-q1n"/>
+                <outlet property="contentView" destination="FfD-Bw-Cdd" id="Pbu-Wg-MVa"/>
                 <outlet property="introField" destination="1p1-gD-O6S" id="qF5-e1-EPf"/>
                 <outlet property="titleField" destination="3KG-O2-X76" id="d5g-be-H9S"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
@@ -26,11 +27,11 @@
                             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
-                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3KG-O2-X76">
+                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Title" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="280" translatesAutoresizingMaskIntoConstraints="NO" id="3KG-O2-X76">
                                     <rect key="frame" x="20" y="71" width="280" height="30"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <constraints>
-                                        <constraint firstAttribute="height" constant="30" id="NUc-wX-htA"/>
+                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="NUc-wX-htA"/>
                                     </constraints>
                                     <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -55,6 +56,7 @@
                                     <rect key="frame" x="20" y="166" width="280" height="21"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <color key="textColor" red="0.50196081399917603" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Intro" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="280" translatesAutoresizingMaskIntoConstraints="NO" id="1p1-gD-O6S">
@@ -63,27 +65,27 @@
                                     <constraints>
                                         <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="0dw-mu-0Em"/>
                                     </constraints>
-                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                    <color key="textColor" red="0.098039217293262482" green="0.098039217293262482" blue="0.098039217293262482" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                             </subviews>
-                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                             <constraints>
-                                <constraint firstItem="n3R-5O-41w" firstAttribute="top" secondItem="3KG-O2-X76" secondAttribute="bottom" constant="10" id="9kF-hC-Mog" userLabel="Vertical Space - (10) - Label - Author - Label - Title"/>
-                                <constraint firstItem="3KG-O2-X76" firstAttribute="top" secondItem="FfD-Bw-Cdd" secondAttribute="top" constant="20" id="FE1-0h-3sh"/>
+                                <constraint firstItem="n3R-5O-41w" firstAttribute="top" secondItem="3KG-O2-X76" secondAttribute="bottom" constant="15" id="9kF-hC-Mog" userLabel="Vertical Space - (10) - Label - Author - Label - Title"/>
+                                <constraint firstItem="3KG-O2-X76" firstAttribute="top" secondItem="FfD-Bw-Cdd" secondAttribute="top" constant="40" id="FE1-0h-3sh"/>
                                 <constraint firstItem="1p1-gD-O6S" firstAttribute="leading" secondItem="FfD-Bw-Cdd" secondAttribute="leading" constant="20" id="IPA-aC-tZz"/>
-                                <constraint firstAttribute="trailing" secondItem="zjl-SQ-Ft8" secondAttribute="trailing" constant="20" id="Ooi-Dt-QOO"/>
-                                <constraint firstAttribute="trailing" secondItem="Qfz-9g-nNm" secondAttribute="trailing" constant="20" id="QbW-S5-K4A"/>
-                                <constraint firstItem="zjl-SQ-Ft8" firstAttribute="top" secondItem="Qfz-9g-nNm" secondAttribute="bottom" constant="10" id="RTJ-vb-NlG"/>
+                                <constraint firstAttribute="trailing" secondItem="zjl-SQ-Ft8" secondAttribute="trailing" constant="15" id="Ooi-Dt-QOO"/>
+                                <constraint firstAttribute="trailing" secondItem="Qfz-9g-nNm" secondAttribute="trailing" constant="15" id="QbW-S5-K4A"/>
+                                <constraint firstItem="zjl-SQ-Ft8" firstAttribute="top" secondItem="Qfz-9g-nNm" secondAttribute="bottom" constant="20" id="RTJ-vb-NlG"/>
                                 <constraint firstItem="zjl-SQ-Ft8" firstAttribute="leading" secondItem="FfD-Bw-Cdd" secondAttribute="leading" constant="20" id="Uky-bq-3cR"/>
                                 <constraint firstItem="n3R-5O-41w" firstAttribute="leading" secondItem="FfD-Bw-Cdd" secondAttribute="leading" constant="20" id="Yki-9i-Udi"/>
-                                <constraint firstAttribute="trailing" secondItem="3KG-O2-X76" secondAttribute="trailing" constant="20" id="bvq-Hq-b4E"/>
-                                <constraint firstAttribute="trailing" secondItem="1p1-gD-O6S" secondAttribute="trailing" constant="20" id="cSw-8k-No4"/>
-                                <constraint firstItem="Qfz-9g-nNm" firstAttribute="top" secondItem="n3R-5O-41w" secondAttribute="bottom" constant="10" id="fEq-Bj-raJ"/>
-                                <constraint firstAttribute="trailing" secondItem="n3R-5O-41w" secondAttribute="trailing" constant="20" id="h28-Hm-PHH"/>
+                                <constraint firstAttribute="trailing" secondItem="3KG-O2-X76" secondAttribute="trailing" constant="15" id="bvq-Hq-b4E"/>
+                                <constraint firstAttribute="trailing" secondItem="1p1-gD-O6S" secondAttribute="trailing" constant="15" id="cSw-8k-No4"/>
+                                <constraint firstItem="Qfz-9g-nNm" firstAttribute="top" secondItem="n3R-5O-41w" secondAttribute="bottom" constant="15" id="fEq-Bj-raJ"/>
+                                <constraint firstAttribute="trailing" secondItem="n3R-5O-41w" secondAttribute="trailing" constant="15" id="h28-Hm-PHH"/>
                                 <constraint firstItem="Qfz-9g-nNm" firstAttribute="leading" secondItem="FfD-Bw-Cdd" secondAttribute="leading" constant="20" id="m6q-tg-fId"/>
                                 <constraint firstItem="3KG-O2-X76" firstAttribute="leading" secondItem="FfD-Bw-Cdd" secondAttribute="leading" constant="20" id="mii-0J-7dR"/>
-                                <constraint firstItem="1p1-gD-O6S" firstAttribute="top" secondItem="zjl-SQ-Ft8" secondAttribute="bottom" constant="10" id="oRR-bn-i5A"/>
+                                <constraint firstItem="1p1-gD-O6S" firstAttribute="top" secondItem="zjl-SQ-Ft8" secondAttribute="bottom" constant="5" id="oRR-bn-i5A"/>
                                 <constraint firstAttribute="bottom" secondItem="1p1-gD-O6S" secondAttribute="bottom" constant="20" id="x7u-QT-KQE"/>
                             </constraints>
                         </view>
