--- a/xcz/AuthorHeaderView.xib
+++ b/xcz/AuthorHeaderView.xib
@@ -24,7 +24,7 @@
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oo8-FE-cfp">
-                    <rect key="frame" x="0.0" y="0.0" width="320" height="145"/>
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="181"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <subviews>
                         <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QYU-PA-Yb7">
@@ -42,8 +42,15 @@
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <nil key="highlightedColor"/>
                         </label>
+                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="简介" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ODG-oa-sXc">
+                            <rect key="frame" x="15" y="101" width="285" height="21"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <color key="textColor" red="0.50196081400000003" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
                         <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Intro" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="285" translatesAutoresizingMaskIntoConstraints="NO" id="V3j-jz-m4C">
-                            <rect key="frame" x="15" y="91" width="285" height="18"/>
+                            <rect key="frame" x="15" y="127" width="285" height="18"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <constraints>
                                 <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="18" id="4t2-K6-1DO"/>
@@ -52,7 +59,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="作品" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7oj-Ue-aPF">
-                            <rect key="frame" x="15" y="124" width="285" height="21"/>
+                            <rect key="frame" x="15" y="160" width="285" height="21"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <color key="textColor" red="0.50196081400000003" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -63,15 +70,18 @@
                     <constraints>
                         <constraint firstItem="QYU-PA-Yb7" firstAttribute="top" secondItem="oo8-FE-cfp" secondAttribute="top" constant="25" id="4Wf-nX-RFH"/>
                         <constraint firstItem="QYU-PA-Yb7" firstAttribute="leading" secondItem="oo8-FE-cfp" secondAttribute="leading" constant="15" id="6c4-fr-5ia"/>
+                        <constraint firstItem="V3j-jz-m4C" firstAttribute="top" secondItem="ODG-oa-sXc" secondAttribute="bottom" constant="5" id="ATN-z7-Y1g"/>
                         <constraint firstAttribute="trailing" secondItem="QYU-PA-Yb7" secondAttribute="trailing" constant="20" id="CaM-8T-rqj"/>
                         <constraint firstAttribute="bottom" secondItem="7oj-Ue-aPF" secondAttribute="bottom" id="QPS-mi-r7p"/>
                         <constraint firstAttribute="trailing" secondItem="V3j-jz-m4C" secondAttribute="trailing" constant="20" id="QrS-6y-osn"/>
-                        <constraint firstItem="V3j-jz-m4C" firstAttribute="top" secondItem="5HX-vR-JTz" secondAttribute="bottom" constant="5" id="WuL-QZ-auk"/>
+                        <constraint firstAttribute="trailing" secondItem="ODG-oa-sXc" secondAttribute="trailing" constant="20" id="VSF-Yz-7EC"/>
                         <constraint firstItem="7oj-Ue-aPF" firstAttribute="top" secondItem="V3j-jz-m4C" secondAttribute="bottom" constant="15" id="Yx9-Jp-LtI"/>
+                        <constraint firstItem="ODG-oa-sXc" firstAttribute="leading" secondItem="oo8-FE-cfp" secondAttribute="leading" constant="15" id="aUe-HT-qlH"/>
                         <constraint firstItem="7oj-Ue-aPF" firstAttribute="leading" secondItem="oo8-FE-cfp" secondAttribute="leading" constant="15" id="akl-UB-Of8"/>
                         <constraint firstItem="V3j-jz-m4C" firstAttribute="leading" secondItem="oo8-FE-cfp" secondAttribute="leading" constant="15" id="avt-Lh-8eR"/>
                         <constraint firstAttribute="trailing" secondItem="7oj-Ue-aPF" secondAttribute="trailing" constant="20" id="bWe-EG-WmN"/>
                         <constraint firstAttribute="trailing" secondItem="5HX-vR-JTz" secondAttribute="trailing" constant="20" id="naf-P7-aaf"/>
+                        <constraint firstItem="ODG-oa-sXc" firstAttribute="top" secondItem="5HX-vR-JTz" secondAttribute="bottom" constant="15" id="pZg-Fg-1Um"/>
                         <constraint firstItem="5HX-vR-JTz" firstAttribute="leading" secondItem="oo8-FE-cfp" secondAttribute="leading" constant="15" id="wp7-iF-WOl"/>
                         <constraint firstItem="5HX-vR-JTz" firstAttribute="top" secondItem="QYU-PA-Yb7" secondAttribute="bottom" constant="10" id="xfB-i8-mQg"/>
                     </constraints>
