--- a/xcz/XCZAuthorsViewController.xib
+++ b/xcz/XCZAuthorsViewController.xib
@@ -6,6 +6,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="XCZAuthorsViewController">
             <connections>
+                <outlet property="searchBar" destination="3HC-ED-AXO" id="N16-Qv-lhc"/>
                 <outlet property="searchDisplayController" destination="p86-ZD-jbg" id="QrQ-2w-1gG"/>
                 <outlet property="tableView" destination="RKM-ai-hbs" id="7Fw-ju-uLT"/>
                 <outlet property="topConstraint" destination="whc-BT-YZi" id="J7B-Xh-vIF"/>
